--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ h1 {
   font-size: 2.2rem;
 }
 
+h3 {
+  font-family: 'Fascinate', cursive;
+  font-size: 1.5rem;
+}
+
 p {
   color: center;
   font-family: 'Kdam Thmor Pro', sans-serif;
@@ -23,7 +28,7 @@ strong {
 
 form {
   display: flex;
-  
+
 
 }
 
@@ -32,12 +37,13 @@ form button {
   color: #fff;
   width: 15rem;
   height: 3rem;
-  border-radius: 0 10px 10px 0; 
+  border-radius: 0 10px 10px 0;
   border-color: rgb(161, 161, 161);
   font-family: 'Kdam Thmor Pro', sans-serif;
 }
+
 form input {
-  border-radius: 10px 0 0 10px; 
+  border-radius: 10px 0 0 10px;
   border-color: rgb(173, 170, 170);
   font-family: 'Kdam Thmor Pro', sans-serif;
 }
@@ -46,10 +52,10 @@ form input {
   margin-top: 40px 20px 0;
   font-size: 0;
   height: 45px;
-  
+
 }
 
-.header > * {
+.header>* {
   display: inline-block;
   font-size: 16px;
   vertical-align: middle;
@@ -64,9 +70,9 @@ form input {
   right: 0;
   background-color: #b6e4a5;
   z-index: 1;
-  
-  
-  
+
+
+
 }
 
 li {
@@ -98,14 +104,14 @@ li {
   text-align: right;
   font-size: 14px;
   font-weight: 600;
-  
+
 }
 
 .actions a {
   color: #67b54b;
 }
 
-.actions > * {
+.actions>* {
   margin-right: 10px;
   margin-left: 10px;
 }
@@ -117,11 +123,11 @@ li {
   margin-left: 10px;
   margin-right: 10px;
   display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-	align-items: center;
-	align-content: stretch;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: stretch;
 }
 
 
@@ -132,7 +138,7 @@ li {
   padding: 14px 12px;
   border-radius: 5px;
   border-style: none;
-  
+
 }
 
 
@@ -143,7 +149,7 @@ li {
   align-items: center;
   justify-content: center;
   margin: 5rem;
-  
+
 }
 
 .publish {
@@ -155,17 +161,17 @@ li {
   align-self: flex-start;
   line-height: 1.5rem;
 
-  
+
 }
 
-.image_video{
+.image_video {
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-self: flex-end;
 }
 
-.image_video img{
+.image_video img {
   width: 5rem;
   margin-top: 10px;
 }
@@ -188,6 +194,7 @@ li {
   text-align: left;
   width: 50%;
 }
+
 .information h1 {
   color: #025157;
   font-size: 3rem;
@@ -219,7 +226,7 @@ li {
   justify-content: center;
   align-items: center;
   font-family: 'Kdam Thmor Pro', sans-serif;
-  
+
 }
 
 .people img {
@@ -251,10 +258,76 @@ li {
   border-radius: 50%;
   width: 6rem;
   height: 6rem;
-  
+
 }
 
 .circle img {
-  margin:15px auto;
-  display:block;
+  margin: 15px auto;
+  display: block;
+}
+
+.features {
+  background-color: #025157;
+  padding: 5% 10%;
+  display: grid;
+  grid-template: repeat(2, 330px) / repeat(2, 1fr);
+}
+
+.features .features-card {
+  margin-bottom: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  background-color: #fff;
+  border: 1px solid #dadada;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+
+.features .features-card .features-content {
+  padding: 30px 20px 40px 40px;
+  flex: 2;
+}
+
+.features .features-card .features-content > * {
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
+
+.features .features-card .features-content img {
+  width: 40px;
+}
+
+.features .features-card .features-content h3 {
+  font-size: 24px;
+  color: #343434;
+  font-weight: 400;
+}
+
+.features .features-card .features-content p {
+  font-size: 16px;
+  color: #7e7e7e;
+  font-weight: 400;
+}
+
+.features .features-card .features-content a {
+  font-size: 16px;
+  color: #67b54b;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+.features .features-card .features-image {
+  flex: 1;
+  width: 100%;
+  position: relative;
+  right: -50px;
+  height: 100%;
+}
+
+.features .features-card .features-image figure,
+.features .features-card .features-image img {
+  margin-top: 0;
+  height: 100%;
 }
