--- a/style.css
+++ b/style.css
@@ -104,17 +104,25 @@ li {
   text-align: right;
   font-size: 14px;
   font-weight: 600;
+  
+  
 
 }
 
 .actions a {
-  color: #67b54b;
+  color: #437c2f;
+  font-family: 'Kdam Thmor Pro', sans-serif;
+  text-decoration: none;
+  margin-right: 5px;
+}
+.actions button {
+  font-family: 'Kdam Thmor Pro', sans-serif;
+
+  text-justify: center;
+
 }
 
-.actions>* {
-  margin-right: 10px;
-  margin-left: 10px;
-}
+
 
 .main {
   margin-top: 140px;
@@ -290,7 +298,7 @@ li {
   flex: 2;
 }
 
-.features .features-card .features-content > * {
+.features .features-card .features-content>* {
   margin-bottom: 1rem;
   margin-top: 0;
 }
@@ -330,4 +338,89 @@ li {
 .features .features-card .features-image img {
   margin-top: 0;
   height: 100%;
+}
+
+.how-work {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 5rem 0;
+}
+
+.how-work a {
+  color: #67b54b;
+  text-decoration: none;
+  
+}
+.how-work h1 {
+  color: #025157;
+  
+}
+
+
+.how-work button {
+  align-self: center;
+  color: #fff;
+  background-color: #025157;
+  font-size: 1rem;
+  width: 15rem;
+  height: 3rem;
+  border: 1px solid #e9f4f5;
+  border-radius: 10px;
+  
+}
+
+.how-work .steps {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 15px;
+  justify-items: center;
+  margin: 1rem 15rem;
+
+}
+
+.how-work .card-step {
+  background: #fff;
+  width: 95%;
+  height: 100%;
+  border-radius: 5px;
+  border: 1px solid rgb(184, 182, 182);
+}
+
+.how-work .card-step:hover {
+  -webkit-box-shadow: 5px 5px 15px 5px #000000; 
+  box-shadow: 5px 5px 15px 5px #000000;
+}
+
+.how-work .card-step .card-step-img img{
+  width: 100%;
+  height: 250px;
+}
+
+.how-work .card-step .card-step-content {
+  padding: 25px;
+  
+}
+.how-work .card-step .card-step-content h3{
+  text-align: center;
+  color: #025157;
+  
+}
+.how-work .card-step .card-step-content p {
+  text-align: start;
+  margin-bottom: 1rem;
+  
+}
+
+.how-work .card-step .card-step-content a {
+  color: #67b54b;
+  text-decoration: none;
+  align-self: flex-end;
+  font-family: 'Kdam Thmor Pro', sans-serif; 
+}
+
+.otherInformation {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
 }
